Add testing and bring this project up to date.